--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,16 @@ nav a:hover {
     background-color: #26A69A;
 }
 
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+    color: #E0E0E0;
+    background-color: #26A69A;
+}
+
+.nav-tabs > li > a {
+    font-size: 16px;
+    font-weight: bold;
+}
+
 .table-group-header {
     border: 2px solid #26A69A;
 }
