--- a/css/style.css
+++ b/css/style.css
@@ -6,28 +6,49 @@ body {
 a:visited {
     color:#26A69A;
 }
+
 a:link {
     color:#424242;
 }
+
 a:hover {
     color:#26A69A;
 }
+
 .btn-custom {
     color:#E0E0E0;
     background-color: #26A69A;
 }
+
 nav a:visited {
     color:#E0E0E0;
 }
+
 nav a:link {
     color:#E0E0E0;
 }
+
 nav a:hover {
     color:#424242;
 }
 
-.navbar {
-    color:#E0E0E0;
+.navbar-inverse {
+    color: #E0E0E0;
+    background-color: #26A69A;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #E0E0E0;
+    background-color: #26A69A;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover {
+    color: #E0E0E0;
+    background-color: #26A69A;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #E0E0E0;
     background-color: #26A69A;
 }
 
