finally creating polygons

--- a/content/djbasin_resources/djbasin.css
+++ b/content/djbasin_resources/djbasin.css
@@ -28,11 +28,11 @@
     background-color:darksalmon;
 }
 
-.btnSurveys, #btnBUOWLUpdate {
+.btnSurveys, #btnBUOWLUpdate, .featureID, #BUOWLGeojson {
     display: none;
 }
 
-#btnEditBUOWL, #btnEditBUOWLgeometry {
+#btnEditBUOWL, #btnEditBUOWLgeometry, #btnToggleBUOWLgeometry {
     color: #007fff;
 }
 
