adding front-end multipoly

--- a/content/djbasin_resources/djbasin.css
+++ b/content/djbasin_resources/djbasin.css
@@ -32,7 +32,7 @@
     display: none;
 }
 
-#btnEditBUOWL, #btnEditBUOWLgeometry, #btnToggleBUOWLgeometry {
+#btnEditBUOWL, #btnEditBUOWLgeometry, #btnToggleBUOWLgeometry, #btnAddBUOWLPart {
     color: #007fff;
 }
 
